--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "email": "code@riaskov.com"
   },
   "main": "index.js",
+  "types": "index.d.ts",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
   "keywords": [
     "xpub2Address",
