--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "prettier": "^4.0.0-alpha.8",
     "rollup": "^4.18.0",
     "tslib": "^2.6.3",
     "typescript": "5.5.1-rc"
